--- a/views/news.html
+++ b/views/news.html
@@ -92,23 +92,53 @@
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">媒体中心</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">公司介绍</a>
+                            <a href="">新闻动态</a>
                         </span>
                     </div>
-                    <div class="text-introduce">
-                        <a href=""> <img src="../images/_1483502523_8c3u38.jpg" alt=""></a>
-                        长效和靶向制剂国家重点实验室以创新药物制剂的研究为目标，紧密围绕长效注射微球、靶向脂质体、药用高端辅料开展研究。凝练了长效制剂给药系统和释药技术研究、靶向制剂给药系统和释药技术研究、长效和靶向制剂高端载体材料研制开发等三大研究方向。
-                        　　目前，实验室建立了国际先进的新制剂技术平台、中试及产业化基地，关键技术和核心内容获得多项发达国家发明专利授权。主持和承担了国家及省部级科研课题30余项，授权及申请发明专利69项，发表重要学术论文43篇。实验室现有在研产品线21个，6个产品同期开展国际注册。实验室是国内最早进行脂质体研究并成功实现产业化的单位，注射用紫杉醇脂质体是CFDA第一个批准的脂质体药物，目前已成为国内销量最大的紫杉醇产品。
-                        　　在团队建设方面，采用“引进和培养相结合，更加注重培养”的方针，形成一支学术水平高、结构合理、富有创新精神的专业人才队伍。目前实验室拥有固定人员176人，其中“千人计划”3人，“国务院特贴专家”3人，泰山系列人才8人。　
+                    <div class="news-center">
+                        <ul class="news-list">
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="pagination">
+                            <li><a href="#">&laquo;</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">&raquo;</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司介绍</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>精神文化</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>组织结构</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>新闻动态</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>专题报道</a></li>
                     </ul>
                 </div>
 
