--- a/views/introduce.html
+++ b/views/introduce.html
@@ -60,7 +60,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">新闻动态</a></li>
+                        <li><a href="./news.html">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
