--- a/views/recruit.html
+++ b/views/recruit.html
@@ -60,7 +60,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">新闻动态</a></li>
+                        <li><a href="./news.html">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
@@ -92,54 +92,50 @@
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">媒体中心</a>
+                            <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">新闻动态</a>
+                            <a href="">公司介绍</a>
                         </span>
                     </div>
-                    <div class="news-center">
-                        <ul class="news-list">
-                            <li>
-                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
-                                <div class="news-digest">
-                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
-                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
-                                    <span >发布时间：2017年09月18日 </span>
-                                </div>
-                            </li>
-                            <li>
-                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
-                                <div class="news-digest">
-                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
-                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
-                                    <span >发布时间：2017年09月18日 </span>
-                                </div>
-                            </li>
-                            <li>
-                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
-                                <div class="news-digest">
-                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
-                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
-                                    <span >发布时间：2017年09月18日 </span>
-                                </div>
-                            </li>
-                        </ul>
-                        <ul class="pagination">
-                            <li class="disabled"><a href="#">&laquo;</a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">&raquo;</a></li>
-                        </ul>
-                        <a href="mailto:529284396@qq.com?body=邀请您参加腾讯onepiece分享%0A%0A期待您的到来%0A%0Apeunzhang">单击这里给peun发电子邮件</a>
+                    <div class="position-list">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>职位</th>
+                                    <th>学历</th>
+                                    <th>工作经验</th>
+                                    <th>招聘人数</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>新闻动态</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>专题报道</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
                     </ul>
                 </div>
 
