--- a/views/anenst/introduce.html
+++ b/views/anenst/introduce.html
@@ -5,17 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/common.css">
+    <script src="../../js/jquery-3.2.1.min.js"></script>
+    <script src="../../js/bootstrap.js"></script>
     <title>菲博特</title>
 </head>
 <body>
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="../index.html"></a>
+            <a class="logo" href="../../index.html"></a>
             <div class="nav-right">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
@@ -60,7 +60,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="./news.html">新闻动态</a></li>
+                        <li><a href="../news.html">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
@@ -85,7 +85,7 @@
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
-            <img src="../images/introduce.jpg" alt="">
+            <img src="../../images/introduce.jpg" alt="">
             <div class="text-content">
                 <div class="col-sm-8">
                     <div class="bread">
@@ -98,7 +98,7 @@
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <a href=""> <img src="../images/_1483502523_8c3u38.jpg" alt=""></a>
+                        <a href=""> <img src="../../images/_1483502523_8c3u38.jpg" alt=""></a>
                         长效和靶向制剂国家重点实验室以创新药物制剂的研究为目标，紧密围绕长效注射微球、靶向脂质体、药用高端辅料开展研究。凝练了长效制剂给药系统和释药技术研究、靶向制剂给药系统和释药技术研究、长效和靶向制剂高端载体材料研制开发等三大研究方向。
                         　　目前，实验室建立了国际先进的新制剂技术平台、中试及产业化基地，关键技术和核心内容获得多项发达国家发明专利授权。主持和承担了国家及省部级科研课题30余项，授权及申请发明专利69项，发表重要学术论文43篇。实验室现有在研产品线21个，6个产品同期开展国际注册。实验室是国内最早进行脂质体研究并成功实现产业化的单位，注射用紫杉醇脂质体是CFDA第一个批准的脂质体药物，目前已成为国内销量最大的紫杉醇产品。
                         　　在团队建设方面，采用“引进和培养相结合，更加注重培养”的方针，形成一支学术水平高、结构合理、富有创新精神的专业人才队伍。目前实验室拥有固定人员176人，其中“千人计划”3人，“国务院特贴专家”3人，泰山系列人才8人。　
@@ -172,8 +172,8 @@
         <div class="qr-code col-sm-4">
             <h3 style="padding: 0 42px">关于我们</h3>
             <ul>
-                <li><img src="../images/wechat.png" alt=""></li>
-                <li><img src="../images/wechat.png" alt=""></li>
+                <li><img src="../../images/wechat.png" alt=""></li>
+                <li><img src="../../images/wechat.png" alt=""></li>
             </ul>
         </div>
 
@@ -182,7 +182,7 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-<script src="../js/common.js"></script>
+<script src="../../js/common.js"></script>
 <script>
 
 </script>
