--- a/views/anenst/companyinfo.html
+++ b/views/anenst/companyinfo.html
@@ -122,14 +122,29 @@
                     <div class="text-introduce">
                         <h1 style="color: #bbbbbb">SINCE  1994</h1>
 
-                        <p style="color: #333333;font-size: 14px;">
-                            绿叶制药集团有限公司
-                            绿叶制药集团是一家以研发为基础的专业制药企业，公司成立于1994年，2014年在香港主板上市(02186.HK)。公司在烟台、北京、南京、泸州和德国米斯巴赫设有生产基地，在中国、美国和欧洲设有研发中心，在香港、新加坡和马来西亚设有分支机构，全球员工近4000名。
+                        <div style="color: #333333;font-size: 14px;">
+                            <h3>
+                                绿叶制药集团有限公司
+                             </h3>
+                           <p>
+                               绿叶制药集团是一家以研发为基础的专业制药企业，公司成立于1994年，2014年在香港主板上市(02186.HK)。公司在烟台、北京、南京、泸州和德国米斯巴赫设有生产基地，在中国、美国和欧洲设有研发中心，在香港、新加坡和马来西亚设有分支机构，全球员工近4000名。
 
-                            绿叶制药致力于创新药物的研发、生产和销售，30余个上市产品覆盖抗肿瘤、中枢神经系统、心血管、糖尿病等规模最大及增长速度最快的治疗领域；业务遍及中国、美国、欧洲、澳洲、日韩等全球主要医药市场及新兴市场。绿叶制药建立了与国际接轨的研发体系，在微球、脂质体、透皮释药和皮下植入剂等新型给药系统领域处于国际先进水平。公司拥有丰富的在研产品线，多个创新制剂及创新药在美国FDA开展不同阶段的注册临床研究，并已取得突破性进展。
+                               绿叶制药致力于创新药物的研发、生产和销售，30余个上市产品覆盖抗肿瘤、中枢神经系统、心血管、糖尿病等规模最大及增长速度最快的治疗领域；业务遍及中国、美国、欧洲、澳洲、日韩等全球主要医药市场及新兴市场。绿叶制药建立了与国际接轨的研发体系，在微球、脂质体、透皮释药和皮下植入剂等新型给药系统领域处于国际先进水平。公司拥有丰富的在研产品线，多个创新制剂及创新药在美国FDA开展不同阶段的注册临床研究，并已取得突破性进展。
 
-                            绿叶制药将继续以创新和国际化为方向，力争成为最受尊敬的全球领先制药企业。
-                        </p>
+                               绿叶制药将继续以创新和国际化为方向，力争成为最受尊敬的全球领先制药企业。
+                           </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img src="../../images/_1441594315_em950u.png" alt="">
+                            </div>
+                            <div class="col-xs-9">
+                                <h3>创新成就卓越</h3>
+                                <p>
+                                    绿叶以创新为企业驱动力，以成就卓越为目标信仰。绿叶制药追求和期望通过持续创新来达到和实现卓越企业、卓越产品和卓越品牌的梦想。
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
