--- a/views/anenst/companyinfo.html
+++ b/views/anenst/companyinfo.html
@@ -135,10 +135,10 @@
                            </p>
                         </div>
                         <div class="row">
-                            <div class="col-xs-3">
-                                <img src="../../images/_1441594315_em950u.png" alt="">
+                            <div class="col-xs-5">
+                                <img src="../../images/_1441594315_em950u.png" alt="" style="width: 100%">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-7">
                                 <h3>创新成就卓越</h3>
                                 <p>
                                     绿叶以创新为企业驱动力，以成就卓越为目标信仰。绿叶制药追求和期望通过持续创新来达到和实现卓越企业、卓越产品和卓越品牌的梦想。
