--- a/views/anenst/companyinfo.html
+++ b/views/anenst/companyinfo.html
@@ -120,17 +120,17 @@
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <h1 style="color: #bbbbbb">SINCE  1994</h1>
+                        <h1 style="color: #bbbbbb;font-size: 40px;">SINCE  1994</h1>
 
-                        <div style="color: #333333;font-size: 14px;">
+                        <div style="color: #444444;font-size: 14px;">
                             <h3>
                                 绿叶制药集团有限公司
                              </h3>
                            <p>
                                绿叶制药集团是一家以研发为基础的专业制药企业，公司成立于1994年，2014年在香港主板上市(02186.HK)。公司在烟台、北京、南京、泸州和德国米斯巴赫设有生产基地，在中国、美国和欧洲设有研发中心，在香港、新加坡和马来西亚设有分支机构，全球员工近4000名。
-
+                               <br> <br>
                                绿叶制药致力于创新药物的研发、生产和销售，30余个上市产品覆盖抗肿瘤、中枢神经系统、心血管、糖尿病等规模最大及增长速度最快的治疗领域；业务遍及中国、美国、欧洲、澳洲、日韩等全球主要医药市场及新兴市场。绿叶制药建立了与国际接轨的研发体系，在微球、脂质体、透皮释药和皮下植入剂等新型给药系统领域处于国际先进水平。公司拥有丰富的在研产品线，多个创新制剂及创新药在美国FDA开展不同阶段的注册临床研究，并已取得突破性进展。
-
+                               <br> <br>
                                绿叶制药将继续以创新和国际化为方向，力争成为最受尊敬的全球领先制药企业。
                            </p>
                         </div>
@@ -223,7 +223,6 @@
                 <li><img src="../../images/wechat.png" alt=""></li>
             </ul>
         </div>
-
     </div>
     <div class="foot-content">
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
