--- a/views/anenst/companyinfo.html
+++ b/views/anenst/companyinfo.html
@@ -132,17 +132,121 @@
                                绿叶制药致力于创新药物的研发、生产和销售，30余个上市产品覆盖抗肿瘤、中枢神经系统、心血管、糖尿病等规模最大及增长速度最快的治疗领域；业务遍及中国、美国、欧洲、澳洲、日韩等全球主要医药市场及新兴市场。绿叶制药建立了与国际接轨的研发体系，在微球、脂质体、透皮释药和皮下植入剂等新型给药系统领域处于国际先进水平。公司拥有丰富的在研产品线，多个创新制剂及创新药在美国FDA开展不同阶段的注册临床研究，并已取得突破性进展。
                                <br> <br>
                                绿叶制药将继续以创新和国际化为方向，力争成为最受尊敬的全球领先制药企业。
+                               <img src="../../images/_1487601052_vagijn.jpg" alt="">
                            </p>
+
                         </div>
-                        <div class="row">
-                            <div class="col-xs-5">
-                                <img src="../../images/_1441594315_em950u.png" alt="" style="width: 100%">
+                        <div class="row" style="background: #dddddd;clear: both">
+                            <div class="col-xs-5" style="padding-left: 0">
+                                <img src="../../images/_1441594315_em950u.png" alt="" width="250" height="200" style="margin: 0">
                             </div>
-                            <div class="col-xs-7">
+                            <div class="col-xs-7" style="padding: 35px;">
                                 <h3>创新成就卓越</h3>
                                 <p>
                                     绿叶以创新为企业驱动力，以成就卓越为目标信仰。绿叶制药追求和期望通过持续创新来达到和实现卓越企业、卓越产品和卓越品牌的梦想。
                                 </p>
+                            </div>
+                        </div>
+                        <div class="tab-cur">
+                            <ul class="tab-cur-list">
+                                <li class="active">核心价值观</li>
+                                <li>经营理念</li>
+                                <li>目标愿景</li>
+                            </ul>
+                            <div class="tab-con">
+                                <div class="item-box active">
+                                    <ul class="item-list">
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="item-box">
+                                    <ul class="item-list">
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                        <li>
+                                        <div class="img-con">
+                                            <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                        </div>
+                                        <h1>诚信</h1>
+                                        <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                    </li>
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="item-box">
+                                    <ul class="item-list">
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                        <li>
+                                            <div class="img-con">
+                                                <img src="../../images/_1441605138_4axtsd.png" alt="" >
+                                            </div>
+                                            <h1>诚信</h1>
+                                            <span>诚实正直，信守承诺，
+
+                                                客观公正，言行一致。</span>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -230,7 +334,12 @@
 </div>
 <script src="../../js/common.js"></script>
 <script>
-
+    $(".tab-cur-list li").mouseover(function () {
+        $('.tab-cur-list').find('li').removeClass('active');
+        $(this).addClass('active');
+        $(".tab-con").find(".item-box").removeClass("active");
+        $(".tab-con").find(".item-box").eq($(this).index()).addClass("active");
+    })
 </script>
 </body>
 </html>
