--- a/css/common.css
+++ b/css/common.css
@@ -208,6 +208,7 @@ ul, li {
 
 /***introduce**/
 .text-content {
+  padding: 20px;
   background: #fff;
   position: relative;
   width: 1040px;
@@ -225,6 +226,57 @@ ul, li {
       float: left;
       margin-right: 12px;
       margin-bottom: 12px; }
+    .text-content .text-introduce .tab-cur {
+      margin-left: -30px;
+      margin-right: -30px;
+      margin-top: 15px; }
+      .text-content .text-introduce .tab-cur .tab-cur-list {
+        margin: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+        display: flex; }
+        .text-content .text-introduce .tab-cur .tab-cur-list li {
+          background: #dddddd;
+          padding: 20px;
+          width: 216px;
+          margin-right: 10px;
+          text-align: center;
+          color: #444444;
+          font-size: 18px;
+          cursor: pointer; }
+        .text-content .text-introduce .tab-cur .tab-cur-list li:last-child {
+          margin-right: 0; }
+        .text-content .text-introduce .tab-cur .tab-cur-list li.active {
+          background: #168fdc;
+          color: #FFFFFF; }
+      .text-content .text-introduce .tab-cur .tab-con {
+        background: #dddddd;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-top: 10px;
+        padding-left: 0; }
+        .text-content .text-introduce .tab-cur .tab-con .item-box {
+          display: none;
+          padding: 0; }
+          .text-content .text-introduce .tab-cur .tab-con .item-box .item-list {
+            padding: 0;
+            display: flex;
+            color: #444444;
+            text-align: center; }
+            .text-content .text-introduce .tab-cur .tab-con .item-box .item-list li .img-con {
+              display: block;
+              clear: both;
+              overflow: hidden;
+              text-align: center;
+              margin-top: 10px; }
+              .text-content .text-introduce .tab-cur .tab-con .item-box .item-list li .img-con img {
+                float: none;
+                margin: 0; }
+            .text-content .text-introduce .tab-cur .tab-con .item-box .item-list li span {
+              display: block;
+              padding: 10px 40px; }
+        .text-content .text-introduce .tab-cur .tab-con .item-box.active {
+          display: block; }
   .text-content .nav-list {
     padding-top: 30px; }
     .text-content .nav-list li {
