--- a/css/common.scss
+++ b/css/common.scss
@@ -278,6 +278,7 @@ ul,li{
 
 /***introduce**/
 .text-content{
+  padding: 20px;
   background: #fff;
   position: relative;
   width: 1040px;
@@ -296,6 +297,73 @@ ul,li{
       float: left;
       margin-right: 12px;
       margin-bottom: 12px;
+    }
+    .tab-cur{
+      margin-left: -30px;
+      margin-right: -30px;
+      margin-top: 15px;
+      .tab-cur-list{
+        margin: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+        display: flex;
+        li{
+          background: #dddddd;
+          padding: 20px;
+          width: 216px ;
+          margin-right: 10px;
+          text-align: center;
+          color: #444444;
+          font-size: 18px;
+          cursor: pointer;
+        }
+        li:last-child{
+          margin-right: 0;
+        }
+        li.active{
+          background: #168fdc;
+          color: #FFFFFF;
+        }
+      }
+      .tab-con{
+        background: #dddddd;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-top: 10px;
+        padding-left: 0;
+        .item-box{
+          display: none;
+          padding: 0;
+          .item-list{
+            padding: 0;
+            display: flex;
+            color: #444444;
+            text-align: center;
+            li{
+
+              .img-con{
+                display: block;
+                clear: both;
+                overflow: hidden;
+                text-align: center;
+                margin-top: 10px;
+                img{
+                  float: none;
+                  margin: 0;
+                }
+              }
+              span{
+                display: block;
+                padding: 10px 40px;
+              }
+            }
+          }
+        }
+        .item-box.active{
+          display: block;
+        }
+      }
+
     }
   }
   .nav-list{
