--- a/views/join/recruit.html
+++ b/views/join/recruit.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/zui.min.css">
     <link rel="stylesheet" href="../../css/common.css">
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/bootstrap.js"></script>
+    <script src="../../js/zui.min.js"></script>
     <title>菲博特</title>
 </head>
 <body>
@@ -60,7 +62,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../news.html">新闻动态</a></li>
+                        <li><a href="../media/news.html">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
@@ -97,18 +99,45 @@
                             <a href="">公司介绍</a>
                         </span>
                     </div>
-                    <div class="text-introduce">
-                        <a href=""> <img src="../../images/_1483502523_8c3u38.jpg" alt=""></a>
-                        长效和靶向制剂国家重点实验室以创新药物制剂的研究为目标，紧密围绕长效注射微球、靶向脂质体、药用高端辅料开展研究。凝练了长效制剂给药系统和释药技术研究、靶向制剂给药系统和释药技术研究、长效和靶向制剂高端载体材料研制开发等三大研究方向。
-                        　　目前，实验室建立了国际先进的新制剂技术平台、中试及产业化基地，关键技术和核心内容获得多项发达国家发明专利授权。主持和承担了国家及省部级科研课题30余项，授权及申请发明专利69项，发表重要学术论文43篇。实验室现有在研产品线21个，6个产品同期开展国际注册。实验室是国内最早进行脂质体研究并成功实现产业化的单位，注射用紫杉醇脂质体是CFDA第一个批准的脂质体药物，目前已成为国内销量最大的紫杉醇产品。
-                        　　在团队建设方面，采用“引进和培养相结合，更加注重培养”的方针，形成一支学术水平高、结构合理、富有创新精神的专业人才队伍。目前实验室拥有固定人员176人，其中“千人计划”3人，“国务院特贴专家”3人，泰山系列人才8人。　
+                    <div class="position-list">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>职位</th>
+                                    <th>学历</th>
+                                    <th>工作经验</th>
+                                    <th>招聘人数</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">销售</a></td>
+                                    <td>大专</td>
+                                    <td>2年</td>
+                                    <td>10</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </div>
+                </div> 
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司介绍</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>精神文化</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>组织结构</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
                     </ul>
                 </div>
 
