--- a/views/anenst/contact.html
+++ b/views/anenst/contact.html
@@ -118,47 +118,50 @@
                             <i>&nbsp;&gt;&gt;</i>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">公司概况</a>
+                            <a href="">联系我们</a>
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <h1 style="color: #bbbbbb;font-size: 40px;">SINCE  1994</h1>
-
-                        <div style="color: #444444;font-size: 14px;">
-                            <h3>
-                                总裁致辞
-                            </h3>
-                            <p>
-
-                                欢迎您访问绿叶制药集团网站!
-                                <br>
-                                <br>
-                                <img src="../../images/ceo.jpg" alt="" style="float: right;width: 180px;">
-                                衷心感谢您对绿叶制药的支持和关注。从1994 年创立之初，绿叶制药一直秉承“专业技术服务于人类健康”的使命，专注于创新药物和新制剂的研发、生产和销售。我们始终用严谨而专业的态度和行动，持续投入创新药物的研究开发，不断向社会提供高品质的药品和服务，致力于提高患者的健康水平和生活质量。每个人都渴望拥有更加健康、更加长久的生命，我们为能够投身于医药健康这一崇高的事业而深感自豪。
-
-                                <br>
-                                <br>
-                                我们将满怀激情、不懈努力，为人类健康事业贡献自己的力量！
-
-                                <br>
-                                <br>
-
-                                绿叶制药集团总裁  刘殿波
-                            </p>
-
-                        </div>
+                        <ul class="contact">
+                            <li>
+                                <div class="col-xs-6 row-contact">
+                                    <div class="col-xs-2">
+                                        <img src="../../images/a61.png" alt="">
+                                    </div>
+                                    <div class="col-xs-10">
+                                        <span>上海</span>
+                                        <span>地址：上海市闵行区田林路1036号科技绿洲三期12号楼</span>
+                                        <span>邮编：200233</span>
+                                        <span>电话：(86)21-62376350</span>
+                                        <span>传真：(86)21-62376269</span>
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 row-contact">
+                                    <div class="col-xs-2">
+                                        <img src="../../images/a61.png" alt="">
+                                    </div>
+                                    <div class="col-xs-10">
+                                        <span>上海</span>
+                                        <span>地址：上海市闵行区田林路1036号科技绿洲三期12号楼</span>
+                                        <span>邮编：200233</span>
+                                        <span>电话：(86)21-62376350</span>
+                                        <span>传真：(86)21-62376269</span>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
+                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
                     </ul>
                 </div>
 
