--- a/views/anenst/culture.html
+++ b/views/anenst/culture.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/zui.min.css">
     <link rel="stylesheet" href="../../css/common.css">
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/bootstrap.js"></script>
+    <script src="../../js/zui.min.js"></script>
     <title>菲博特</title>
 </head>
 <body>
@@ -121,8 +123,8 @@
                     </div>
                     <div class="text-introduce">
                         <img src="../../images/_1441705070_lc3sqq.png" alt="" width="636">
-                        <div class="shangshi_content">
-                            <div class="shangshi_1 ">
+                        <div class="culture">
+                            <div class="row-culture">
                                 <span class="cpx">目标愿景</span>
                                 <ul>
                                     <li><em>2020年战略目标：</em>到2020年成为全球100强的国际性专业制药公司</li>
@@ -130,6 +132,34 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="culture">
+                            <div class="row-culture">
+                                <span class="cpx">企业经营理念</span>
+                                <ul>
+                                    <li><em>客户导向：</em>客户至上，创造满意，用心服务，共同发展</li>
+                                    <li><em>高效运营：</em>合理配置，简明快捷，有效执行，持续改善</li>
+                                    <li><em>合成就员工：</em>尊重平等，关爱分享，共同成长，和谐幸福</li>
+                                    <br>
+                                    <br>
+                                    <li><em>以客户为导向，</em>把握市场先机；<em>高效运营，</em>使企业在竞争中领先；<em>成就员工，</em>实现企业持久发展，基业长青。</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="culture">
+                            <div class="row-culture">
+                                <span class="cpx">核心价值观</span>
+                                <ul>
+                                    <li><em>诚信：</em>诚实正直，信守承诺，客观公正，言行一致</li>
+                                    <li><em>合作：</em>充分沟通，敏捷行动，彼此信任，合作共赢</li>
+                                    <li><em>创新：</em>开拓思路，勇于突破，联系实际，求新求变</li>
+                                    <li><em>卓越：</em>境界高尚，持续改善，自我超越，更优更强</li>
+                                    <br>
+                                    <br>
+                                    <li><em>诚信</em>是企业立命之本，<em>合作</em>是团队制胜保证，<em>创新</em>是绿叶发展动力，<em>卓越</em>是绿叶追求的境界。</li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-sm-4">
