--- a/views/anenst/groupStructure.html
+++ b/views/anenst/groupStructure.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/zui.min.css">
     <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../css/zui.treemap.css">
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/zui.min.js"></script>
+    <script src="../../js/zui.treemap.js"></script>
     <title>菲博特</title>
 </head>
 <body>
@@ -122,38 +124,13 @@
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <h1 style="color: #bbbbbb;font-size: 40px;">SINCE  1994</h1>
-
-                        <div style="color: #444444;font-size: 14px;">
-                            <h3>
-                                总裁致辞
-                            </h3>
-                            <p>
-
-                                欢迎您访问绿叶制药集团网站!
-                                <br>
-                                <br>
-                                <img src="../../images/ceo.jpg" alt="" style="float: right;width: 180px;">
-                                衷心感谢您对绿叶制药的支持和关注。从1994 年创立之初，绿叶制药一直秉承“专业技术服务于人类健康”的使命，专注于创新药物和新制剂的研发、生产和销售。我们始终用严谨而专业的态度和行动，持续投入创新药物的研究开发，不断向社会提供高品质的药品和服务，致力于提高患者的健康水平和生活质量。每个人都渴望拥有更加健康、更加长久的生命，我们为能够投身于医药健康这一崇高的事业而深感自豪。
-
-                                <br>
-                                <br>
-                                我们将满怀激情、不懈努力，为人类健康事业贡献自己的力量！
-
-                                <br>
-                                <br>
-
-                                绿叶制药集团总裁  刘殿波
-                            </p>
-
-                        </div>
-
+                        <div id="company-structure"></div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
@@ -233,7 +210,26 @@
 </div>
 <script src="../../js/common.js"></script>
 <script>
-
+    $("#company-structure").treemap({
+        data: {
+            text: '菲博特',
+            children: [{
+                html: '<i class="icon icon-heart text-danger"></i> 生产',
+                children: [{
+                    textColor: 'green',
+                    text: '深圳工厂'
+                }, {
+                    html: '<span class="text-info">启东工厂</span>'
+                }]
+            }, {
+                text: '办公',
+                style: {border: '1px solid green'},
+                collapsed: true,
+                tooltip: '点击展开或折叠',
+                children: ['财务', '销售', '行政', '前台']
+            }]
+        }
+    });
 </script>
 </body>
 </html>
