--- a/views/media/news.html
+++ b/views/media/news.html
@@ -5,17 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/zui.min.css">
+    <link rel="stylesheet" href="../../css/common.css">
+    <script src="../../js/jquery-3.2.1.min.js"></script>
+    <script src="../../js/bootstrap.js"></script>
+    <script src="../../js/zui.min.js"></script>
     <title>菲博特</title>
 </head>
 <body>
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="../index.html"></a>
+            <a class="logo" href="../../index.html"></a>
             <div class="nav-right">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
@@ -60,7 +62,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="./news.html">新闻动态</a></li>
+                        <li><a href="#">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
@@ -85,57 +87,61 @@
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
-            <img src="../images/introduce.jpg" alt="">
+            <img src="../../images/introduce.jpg" alt="">
             <div class="text-content">
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">媒体中心</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">公司介绍</a>
+                            <a href="">新闻动态</a>
                         </span>
                     </div>
-                    <div class="position-list">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>职位</th>
-                                    <th>学历</th>
-                                    <th>工作经验</th>
-                                    <th>招聘人数</th>
-
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><a href="#">销售</a></td>
-                                    <td>大专</td>
-                                    <td>2年</td>
-                                    <td>10</td>
-                                </tr>
-                                <tr>
-                                    <td><a href="#">销售</a></td>
-                                    <td>大专</td>
-                                    <td>2年</td>
-                                    <td>10</td>
-                                </tr>
-                                <tr>
-                                    <td><a href="#">销售</a></td>
-                                    <td>大专</td>
-                                    <td>2年</td>
-                                    <td>10</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="news-center">
+                        <ul class="news-list">
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#"><img src="http://www.luye.cn//lvye/uploads/2017-09/19/_1505785060_g9pw1i.jpg" alt=""></a>
+                                <div class="news-digest">
+                                    <a href="#" class="news-title">绿叶制药分享国际化创新 医药大腕论道“烟台”共商医药产业新发展</a>
+                                    <a href="#" class="news-content">2017年9月16日，以“创新、合作、投资、发展”为主题的“2017医药创新与发展国际会议&rdquo...</a>
+                                    <span >发布时间：2017年09月18日 </span>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="pagination">
+                            <li class="disabled"><a href="#">&laquo;</a></li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">&raquo;</a></li>
+                        </ul>
+                        <a href="mailto:529284396@qq.com?body=邀请您参加腾讯onepiece分享%0A%0A期待您的到来%0A%0Apeunzhang">单击这里给peun发电子邮件</a>
                     </div>
-                </div> 
+                </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>新闻动态</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>专题报道</a></li>
                     </ul>
                 </div>
 
@@ -199,8 +205,8 @@
         <div class="qr-code col-sm-4">
             <h3 style="padding: 0 42px">关于我们</h3>
             <ul>
-                <li><img src="../images/wechat.png" alt=""></li>
-                <li><img src="../images/wechat.png" alt=""></li>
+                <li><img src="../../images/wechat.png" alt=""></li>
+                <li><img src="../../images/wechat.png" alt=""></li>
             </ul>
         </div>
 
@@ -209,7 +215,7 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-<script src="../js/common.js"></script>
+<script src="../../js/common.js"></script>
 <script>
 
 </script>
